@@ -108,8 +108,8 @@ CREATE TABLE acls (
 CREATE TABLE adstats (
   views int(11) DEFAULT '0' NOT NULL,
   clicks int(11) DEFAULT '0' NOT NULL,
-  when date DEFAULT '0000-00-00' NOT NULL,
+  day date DEFAULT '0000-00-00' NOT NULL,
   BannerID smallint(6) DEFAULT '0' NOT NULL,
-  PRIMARY KEY (when,BannerID)
+  PRIMARY KEY (day,BannerID)
 );
 
